2010-05-26  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Add abstractions: lock_memq, lock_login_memq, lock_delta_memq

	* b-excwho.c: #include "b-esds.h".
	(lock_memq): New func.
	* b-excwho.h (lock_memq): New func decl.
	(lock_login_memq, lock_delta_memq): New macros.
	* ci.c (removelock): Use ‘lock_delta_memq’.
	* co.c (rmlock): Likewise.
	* rcs.c (breaklock, branchpoint): Likewise.
	* rcsclean.c (unlock): Likewise.
	* rcsedit.c (findlock): Use ‘lock_login_memq’.

2010-05-26  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Add abstraction: currently_setuid_p

	* b-excwho.c (currently_setuid_p): New func.
	* b-excwho.h (currently_setuid_p): New func decl.
	* ci.c (main): Use ‘currently_setuid_p’; remove surrounding
	preproc cond ‘defined HAVE_SETUID && defined HAVE_GETUID’.
	* rcsedit.c (getcaller): Use ‘currently_setuid_p’; remove
	preproc cond ‘defined HAVE_SETUID’ and its #else branch.
	* rcsutil.c: #include "b-excwho.h".
	(set_uid_to): Use ‘currently_setuid_p’.

2010-05-26  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Compare delta objects instead of their revision numbers.

	* co.c (rmlock): Dont ‘STR_SAME’; instead compare objects (with ‘==’).
	* rcs.c (breaklock): Likewise.

2010-05-26  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Add abstraction: caller_login_p

	Here, "I" means "#include "b-excwho.h";
	"U" means "Use ‘caller_login_p’".
	* b-excwho.h: New file.
	* b-excwho.c: New file.
	* Makefile.am (libparts_a_SOURCES): Add b-excwho.h, b-excwho.c.
	* ci.c: I.
	(removelock, addbranch): U.
	* co.c: I.
	(rmlock): U.
	* rcs.c: I.
	(breaklock): U.
	* rcsclean.c: I.
	(unlock): U.
	* rcsedit.c: I.
	(findlock, addlock, checkaccesslist): U.

2010-05-25  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Consult env var RCS_MEM_LIMIT to set the memory limit.

	* base.h (struct behavior): Add member ‘mem_limit’.
	* rcsutil.c (gnurcs_init): Set ‘BE (mem_limit)’.
	* b-fro.c (REASONABLE_MMAP_SIZE): Delete #define.
	(fro_open): Use ‘BE (mem_limit)’ to determine read method.
